--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
             <h1 class="section-title">Project</h1>
             <div class="projects">
                 <div class="project">
-                    <a href="https://github.com/Kharat146/vegetableshop">
+                    <a href="https://ajinkyabengal1.github.io/Elitefx/">
                    <img src="https://image.flaticon.com/icons/png/512/712/712747.png" alt="">
-                    <h4>E-Commarce project</h4>
+                    <h4>Forex Trading project</h4>
                    </a>
                 </div>
                 <div class="project">
