--- a/index.html
+++ b/index.html
@@ -216,15 +216,15 @@
                     <p>Experience*</p>
                     <h4>2021 - present</h4>
                     <h3>Front-end Developer</h3>
-                    <p>I am currently work on Skillhub as a react developer. Currently i am working on some technology
+                    <p>I am currently work on Innovations Hub as a react developer. Currently i am working on some technology
                         likes React js, Redux, HTML, CSS, Bootstrap, Github, etc.</p>
                 </div>
                 <div class="block">
                     <p>Experience*</p>
                     <h4>2021 - 2021</h4>
                     <h3>UI/UX Developer</h3>
-                    <p>I have done an internship at Skillhub IT Solution as a UI/UX Developer. This was six month
-                        internship. Time period of internship was January to July 2021. In this internship i have work
+                    <p>I have done an internship at Innovations Hub services as a UI/UX Developer. This was six month
+                        internship. Time period of internship was September 2021 to March 2022. In this internship i have work
                         on some project by using html, css, bootstrap , javascript, etc. </p>
                 </div>
 
