--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
             <div class="projects">
                 <div class="project">
                     <a href="https://ajinkyabengal1.github.io/Elitefx/">
-                   <img src="https://image.flaticon.com/icons/png/512/712/712747.png" alt="">
+                   <img src="https://w7.pngwing.com/pngs/956/338/png-transparent-foreign-exchange-market-trader-binary-option-investing-online-trade-globe-logo-world.png" alt="">
                     <h4>Forex Trading project</h4>
                    </a>
                 </div>
                 <div class="project">
-                    <a href="https://weatherforecast-ajay.netlify.app/">
+                    <a href="https://ajinkyabengal1.github.io/weather-app/">
                    <img src="https://img.talkandroid.com/uploads/2014/11/HTC_Weather_App_Large_Icon-450x450.png"
                         alt="">
                     <h4>Weather Application</h4>
