--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 </div>
                 <div class="buttons">
-                    <a href="">contact me</a>
+                    <a href="https://mail.google.com/mail/ajinkyabengal4871@gmail.com">contact me</a>
                     <a href="">Download cv</a>
                 </div>
             </div>
@@ -155,7 +155,7 @@
             <div class="projects">
                 <div class="project">
                     <a href="https://ajinkyabengal1.github.io/Elitefx/">
-                   <img src="https://w7.pngwing.com/pngs/956/338/png-transparent-foreign-exchange-market-trader-binary-option-investing-online-trade-globe-logo-world.png" alt="">
+                   <img src="https://www.pngkit.com/png/full/48-482849_svg-royalty-free-stock-information-essay-topics-best.png" alt="">
                     <h4>Forex Trading project</h4>
                    </a>
                 </div>
@@ -187,9 +187,9 @@
                     </div>
                 <div class="project">
                     <a href="https://github.com/Kharat146/motar-servicing">
-                     <img src="https://cdn2.iconfinder.com/data/icons/large-people-svg-icons/512/motor_mechanic_tools-512.png"
+                     <img src="https://www.pngkit.com/png/full/116-1169679_ecommerce-shopping-cart-png-photo-ecommerce-website-design.png"
                         alt="">
-                    <h4>web portal for motor servicing at home</h4>
+                    <h4>E-commerce Website</h4>
                 </a>
                    </div>
             </div>
