--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </a>
                     </div>
                 <div class="project">
-                    <a href="https://github.com/Kharat146/motar-servicing">
+                    <a href="https://ajinkyabengal1.github.io/Amazon_clone/">
                      <img src="https://www.pngkit.com/png/full/116-1169679_ecommerce-shopping-cart-png-photo-ecommerce-website-design.png"
                         alt="">
                     <h4>E-commerce Website</h4>
