--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="buttons">
                     <a href="https://mail.google.com/mail/ajinkyabengal4871@gmail.com">contact me</a>
-                    <a href="">Download cv</a>
+                    <a href="https://drive.google.com/file/d/1dMm2a7lUFkdWBXdRPjbaV8tWcZ19LLlD/view?usp=drivesdk">Download cv</a>
                 </div>
             </div>
         </div>
