--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="inner-width">
             <h1 class="section-title">About</h1>
             <div class="about-content">
-                <img src="Aj1.jpg" alt="" class="about-pic">
+                <img src="Aj5.jpg" alt="" class="about-pic">
                 <div class="about-text">
                     <h2>Hi I am AJINKYA BENGAL</h2>
                     <h3>
@@ -139,7 +139,7 @@
 
                 <div class="skill">
                     <div class="skill-info">
-                        <span>jQury</span>
+                        <span>jQuery</span>
                         <span>60%</span>
                     </div>
                     <div class="skill-bar jQury"></div>
