--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
                     <p>Experience*</p>
                     <h4>2021 - 2022</h4>
                     <h3>UI/UX Developer</h3>
-                    <p>I have done an internship at Innovations Hub services as a UI/UX Developer. This was six month
-                        internship. Time period of internship was September 2021 to March 2022. In this internship i have work
+                    <p>I have done an internship at Innovations Hub services as a UI/UX Developer. This was twelve month
+                        internship. Time period of internship was February 2021 to March 2022. In this internship i have work
                         on some project by using html, css, bootstrap , javascript, etc. </p>
                 </div>
 
