--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
                     <p>Experience*</p>
                     <h4>2021 - present</h4>
                     <h3>Front-end Developer</h3>
-                    <p>I am currently work on Innovations Hub as a react developer. Currently i am working on some technology
+                    <p>I am currently work on SkillHub It Solutions as a react developer. Currently i am working on some technology
                         likes React js, Redux, HTML, CSS, Bootstrap, Github, etc.</p>
                 </div>
                 <div class="block">
                     <p>Experience*</p>
                     <h4>2021 - 2022</h4>
                     <h3>UI/UX Developer</h3>
-                    <p>I have done an internship at Innovations Hub services as a UI/UX Developer. This was twelve month
+                    <p>I have done an internship at SkillHub It services as a UI/UX Developer. This was twelve month
                         internship. Time period of internship was February 2021 to March 2022. In this internship i have work
                         on some project by using html, css, bootstrap , javascript, etc. </p>
                 </div>
